kuber/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myflask-deployment
spec:
  selector:
    matchLabels:
      app: myflask
  replicas: 1
  template:
    metadata:
      labels:
        app: myflask
    spec:
      containers:
      - name: myflask
        image: kishinskiy/myflask:latest
        imagePullPolicy: Never
        ports:
          - name: http
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 10
          initialDelaySeconds: 10
