kuber/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myflask
spec:
  selector:
    app: myflask
  ports:
    - name: http
      targetPort: http
      port: 8080
